--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@types/d3": "^7.4.3",
+        "axios": "^1.6.8",
         "bootstrap": "^5.3.3",
         "d3": "^7.9.0",
         "jquery": "^3.7.1",
