--- a/website/package.json
+++ b/website/package.json
@@ -19,6 +19,7 @@
         "bootstrap": "^5.3.3",
         "d3": "^7.9.0",
         "jquery": "^3.7.1",
+        "maz-ui": "^3.42.1",
         "popper.js": "^1.16.1",
         "vue": "^3.4.21",
         "vue-router": "^4.3.0"
