--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
         "d3": "^7.9.0",
         "jquery": "^3.7.1",
         "maz-ui": "^3.42.1",
+        "pinia": "^2.1.7",
         "popper.js": "^1.16.1",
         "vue": "^3.4.21",
         "vue-router": "^4.3.0"
